# toolsense

./: .all-contributorsrc  .env.example  .gitignore  README.md  REUSE.toml  generate_mcq.py  generate_qa.py  pyproject.toml
data/toolsense-mcq/: data.jsonl
data/toolsense-qa/: data.jsonl
data/toolsense-realistic-retrieval/: data.jsonl
realistic_benchmark/: __init__.py  environment.py  llm_utils.py  pipeline.py  postprocess.py  run_generation.py  seed_preparation.py
realistic_benchmark/nodes/: aggregator.py  shared_context.py
realistic_benchmark/nodes/easy/: __init__.py  generate.py  validate.py
realistic_benchmark/nodes/hard/: __init__.py  generate.py  validate.py
realistic_benchmark/nodes/medium/: __init__.py  generate.py  validate.py
realistic_benchmark/prompts/: easy_generate.jinja2  hard_generate.jinja2  medium_generate.jinja2  validator.jinja2
