[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "toolsense"
version = "0.1.0"
description = "Benchmark generation tools for ToolSense: QA probing, MCQ probing, and realistic retrieval benchmarks"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
    "litellm>=1.60,<=1.82.6",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "chromadb>=0.5.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.scripts]
generate-qa = "generate_qa:main"
generate-mcq = "generate_mcq:main"
benchmark-generate = "realistic_benchmark.run_generation:main"
benchmark-seeds = "realistic_benchmark.seed_preparation:main"
benchmark-postprocess = "realistic_benchmark.postprocess:main"

[tool.hatch.build.targets.wheel]
include = ["generate_qa.py", "generate_mcq.py", "realistic_benchmark"]

[tool.uv]
constraint-dependencies = ["onnxruntime<1.25"]

[tool.ruff]
line-length = 110
target-version = "py310"
